--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "alexmills-website",
-  "version": "0.0.0",
-  "description": "",
-  "main": "index.html",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/agjmills/website.git"
-  },
-  "author": "Alex Mills",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/agjmills/website/issues"
-  },
-  "homepage": "https://github.com/agjmills/website#readme",
   "dependencies": {
-    "webpack": "^4.29.2",
-    "webpack-cli": "^3.2.3"
+    "bootstrap": "^4.2.1",
+    "font-awesome": "^4.7.0",
+    "font-awesome-sass": "^4.7.0",
+    "popper.js": "^1.14.7"
+  },
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.16.2",
+    "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.0.1",
+    "jquery": "^3.1.1",
+    "laravel-mix": "^1.0",
+    "lodash": "^4.17.4",
+    "vue": "^2.4.1",
+    "webpack-manifest-plugin": "^1.1.2"
   }
 }
