--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
       - checkout
 
       - run: sudo apt update
+      - run: sudo apt install libpng-dev
 
       - restore_cache:
           keys:
