--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,13 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: install
-      - uses: borales/actions-yarn@v2.0.0
-        with:
-          cmd: run prod
+            #      - uses: actions/checkout@v2
+            #      - uses: borales/actions-yarn@v2.0.0
+            #        with:
+            #          cmd: install
+            #      - uses: borales/actions-yarn@v2.0.0
+            #        with:
+            #          cmd: run prod
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
