--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-            #      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
             #      - uses: borales/actions-yarn@v2.0.0
             #        with:
             #          cmd: install
@@ -24,4 +24,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: 'eu-west-2'
-          #SOURCE_DIR: './public'
+          SOURCE_DIR: './public'
